--- a/views/home.ejs
+++ b/views/home.ejs
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-    <small> <span>FileShare</span> by <a href="https://manojbarman.in" target="_blank">Manoj B</a></small>
+    <small> <span>FileShare</span> by <a href="https://erin-alert-pig.cyclic.app/" target="_blank">Team SAHARA @ Project11</a></small>
   </section>
   <section class="uploader-progress-ui">
     <div class="progress-bar">
